fix for modal text being invisible on dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,11 @@ h1, h2, h3 {
   max-width: 33rem;
 }
 
+/*            Game page              */
+
+.modal{
+  color : #007BFF ;
+}
 .alert{
   display: none;
 }
